--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,11 +1,4 @@
----
-layout: page
-css: ["about.css", "animate.css", "morphext.css"]
-js: ["morphext.min.js", "about.js"]
----
-
-{% include about.html %}
-<!-- <div class="row">
+<div class="row">
   {% for post in paginator.posts %}
   <div class="col s12">
     <div class="card hoverable">
@@ -66,4 +59,4 @@ js: ["morphext.min.js", "about.js"]
       </li>
     </ul>
   </div>
-</div> -->
+</div> 
