--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,16 +1,24 @@
-<div class="col s8 tag-div">
+<style>
+a { color:  #2d8659; }
+</style>
+<div class ="container tag-div "  style="position:relative; width: 60%;"><!-- class="col s8 tag-div"> -->
   <div class="user-pic center-align">
     <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.jpg"></a>
   </div>
-  <div class="user-intro center-align">
+ <!--  <div class="user-intro center-align">
     <h4 class="hidden">I am a <span id="js-rotating">So Simple, Very Doge, Much Wow, Such Cool</span> Text Rotator</h4>
-  </div>
-  <div class="user-content">
+  </div> -->
+  <div class="user-content link">
     <p>
-      Īn delectus tǣcimates perīculā sīt, duō et ƿisl justo oporteat. Mēl te veƿiǽm ġrǣeco iuvǣrēÞ, per āt ǽdmodūm mēƿandri ǽðipiscīng. Eæ qui dicō ǣlia essēnÞ, āt ƿec fugit eraƿt æppǣreǽÞ. Cu ēæm omnes plaċerāt.
+      <span>
+      I am currently an M.Sc. student under supervision of <a href="http://webdocs.cs.ualberta.ca/~alona/" target="_blank"> Dr. Alona Fyshe</a> in <a href="https://www.uvic.ca/engineering/computerscience/index.php" target="_blank"> Computer Science </a> Department at <a href="https://www.uvic.ca/" target="_blank"> University of Victoria</a>.
+
+      My research interests are in Natural language processing, machine learning and their applications to understand human brain. My research is focused on how the human brain put words together to compose higher orders of meaning.
+    </span>
     </p>
-    <p>
-      Lorem ipsum ðolor sit amēt, per hǣrum soleǽt convenire et. Diċo dolōrum qualisque meī ēt, ius æƿ modus facilisi dīspūtaÞioƿī. Ei puteƿÞ vērear quo, ne sit stet sǣpientēm ċoncepÞam. Sed prōbo virtute voluptariā ūt. Ullūm promptǽ ið mel, dīæm neglegenÞur per no, eī nullam possim mediōcrēm pri.
-    </p>
+   <!--  <br>
+    
+    <h4>Education</h2>
+    <span style="font-weight: bold;"> M.Sc., </span> Computer Scoence -->
   </div>
 </div>
