--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,7 @@ a { color:  #2d8659; }
   <!-- <div class="user center-align">
     <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.jpg"></a>
   </div> -->
-<!-- Under Construction... Check my <a href="https://github.com/mahon94" target="_blank"> github!</a>
+<!-- Under Construction... Check my <a href="https://github.com/maryamhonari" target="_blank"> github!</a>
 </div>
  -->
 
